# niff

./: Admindashbordui  Devonlychainui  Legalpagesui
.claude/: settings.json
.github/workflows/: ci.yml
backend/: .env.example  SECURITY.md  docker-compose.yml  jest.config.js  package-lock.json  package.json  tsconfig.json
backend/prisma/: schema.prisma
backend/src/: index.ts  main.ts
contracts/: deployment-registry.json
contracts/niffyinsure/: Cargo.toml  MULTI_ASSET.md  README.md  TODO.md
contracts/niffyinsure/src/: claim.rs  lib.rs  policy.rs  policy_lifecycle.rs  premium.rs  storage.rs  types.rs  validate.rs
contracts/niffyinsure/test_snapshots/: admin_may_bypass_open_claim_guard_when_explicitly_flagged.1.json  cannot_terminate_policy_under_wrong_holder_address.1.json  double_terminate_fails.1.json  duplicate_vote_is_rejected.1.json  full_claim_vote_flow_approve.1.json  full_claim_vote_flow_reject.1.json  non_voter_cannot_vote.1.json  open_claim_blocks_holder_terminate_until_cleared.1.json  set_and_get_policy_round_trip.1.json  terminate_one_of_two_policies_keeps_voter_status.1.json  terminate_second_policy_drops_holder_from_voters_when_last_active.1.json  two_unrelated_holders_each_have_one_voter_slot.1.json
contracts/niffyinsure/tests/: admin.rs  cross_contract.rs  multi_asset.rs  premium_table_tests.rs  quote.rs  rejection.rs  security.rs  storage.rs  termination.rs  types_validate.rs
docs/ops/: audit-exceptions.md  csp-allowlist.md  maintenance-runbook.md
frontend/: .env.example  next.config.mjs  package.json
frontend/src/: middleware.ts
(+66 files in other folders)
