[package]
name = "niffyinsure"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"          # MSRV – soroban-sdk 22+ requires ≥ 1.81
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# ─────────────────────────────────────────────────────────────────────────────
# WARNING: experimental features are NOT production-safe.
#
# The `experimental` feature enables oracle / parametric trigger infrastructure
# that has NOT completed cryptographic review, game-theoretic analysis, or
# legal/compliance assessment.  Do NOT enable this feature in production builds.
#
# Required before activation (see DESIGN-ORACLE.md):
#   ✓ Complete cryptographic design review (signature schemes, replay protection)
#   ✓ Game-theoretic analysis (oracle incentivization, sybil resistance)
#   ✓ Legal & compliance review (regulatory classification of parametric triggers)
#   ✓ Security audit by qualified Soroban smart contract auditors
# ─────────────────────────────────────────────────────────────────────────────
experimental = []

[dependencies]
soroban-sdk = { version = "=23.5.3", features = [] }

[dev-dependencies]
soroban-sdk = { version = "=23.5.3", features = ["testutils"] }

